@@ -17,6 +17,8 @@ Snapshot ????-??-?? ToDo
 
 Now
  - Support for win32.
+ * VM
+   - Fix function calls with ERROR arguments.
 
 Version 0.0.3 2011-12-04
  - Use own interpreter for config.
